CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(LUA_C_API)

#编译参数
SET(CMAKE_CXX_FLAGS "-Wall -g")

#预定义
ADD_DEFINITIONS(-DDEBUG)

#链接库
SET(DYN_LIBS dl)
SET(STATIC_LIBS ${PROJECT_SOURCE_DIR}/lib/liblua.a)

#头文件-I路径设置
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/)

#静态库-L路径设置
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib/)

ADD_SUBDIRECTORY(src)

